panelview: Set the actual mask on wayland

QWindow::mask sets the input regio, since the window contents
are shifted away from (0, 0) for top and left panels,
setting the mask without offset made the input region cover
only part of the panel.
BUG:479926
FIXED-IN:6.0

(cherry picked from commit 21a1b654fe470437a4ff7954b370cf5a88a7c98d)